# nvdiffrast

./: CMakeLists.txt  default.nix  nvdiffrast.nix  shell.nix
.github/workflows/: build.yml
nvdiffrast/torch/: ops.py
